# TurtleBench

./: .gitignore  AGENTS.md  calculate_score.py  crawl_tasks.py  debug_code_to_image.py  eval.py  eval_dspy.py  file_path_real_test_simple.py  file_path_test_final.py  file_path_test_fixed.py  file_path_test_task.py  generate_real_image.py  prompts.py  pyproject.toml  real_turtle_image.ps  requirements.txt  test_code_to_image_real.py  test_eval_dspy.py  test_headless.py  test_real_image_generation.py  test_svg_turtle.py  test_turtle1.py  todo.md
models/: dspy_signatures.py  gemini.py  gpt.py  llava.py
reports/: report.csv
utils/: code_analysis.py  code_preprocess.py  code_to_image.py  code_to_image_svg.py  contours.py  generate_source_images.py  post_code_with_screen_name.txt  rabbit.py  run_option_error.py  sandbox.py  shape_similarity.py  temp_directory.py  watermark.py
